--- a/css/theme/moon.css
+++ b/css/theme/moon.css
@@ -9,7 +9,7 @@
  */
 html * {
   color-profile: sRGB;
-  rendering-intent: auto; 
+  rendering-intent: auto;
 }
 
 /*********************************************
@@ -18,38 +18,62 @@ html * {
 body {
   --main-colour: hsl(192, 100%, 11%);
   --margin-size: 20px;
-  --background-gradient: linear-gradient(135deg, hsl(0, 70%, 85%), hsl(39, 100%, 90%), hsl(60, 100%, 90%), hsl(120, 84%, 95%), hsl(240, 100%, 95%), hsl(281, 80%, 95%)  );
+  --background-gradient: linear-gradient(
+    135deg,
+    hsl(0, 70%, 85%),
+    hsl(39, 100%, 90%),
+    hsl(60, 100%, 90%),
+    hsl(120, 84%, 95%),
+    hsl(240, 100%, 95%),
+    hsl(281, 80%, 95%)
+  );
   color: var(--main-colour);
-  background: linear-gradient(135deg, hsl(0, 70%, 85%), hsl(39, 100%, 90%), hsl(60, 100%, 90%), hsl(120, 84%, 95%), hsl(240, 100%, 95%), hsl(281, 80%, 95%)  );
-  background-color: white; 
+  background: linear-gradient(
+    135deg,
+    hsl(0, 70%, 85%),
+    hsl(39, 100%, 90%),
+    hsl(60, 100%, 90%),
+    hsl(120, 84%, 95%),
+    hsl(240, 100%, 95%),
+    hsl(281, 80%, 95%)
+  );
+  background-color: white;
 }
 
 .reveal {
   font-family: Raleway, sans-serif;
   font-size: 40px;
   font-weight: normal;
-  color: #002b36; 
+  color: #002b36;
 }
 
 ::selection {
   color: #fff;
   background: #d33682;
-  text-shadow: none; }
+  text-shadow: none;
+}
 
 ::-moz-selection {
   color: #fff;
   background: #d33682;
-  text-shadow: none; }
+  text-shadow: none;
+}
 
 .reveal .slides section,
 .reveal .slides section > section {
   line-height: 1.3;
-  font-weight: inherit; }
+  font-weight: inherit;
+}
 
 /*********************************************
  * HEADERS
  *********************************************/
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0 0 20px 0;
   color: #002b36;
   font-family: "League Gothic", Impact, sans-serif;
@@ -58,20 +82,22 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: normal;
   text-transform: uppercase;
   text-shadow: none;
-  word-wrap: break-word; }
+  word-wrap: break-word;
+}
 
 h1 {
   font-size: 3.77em;
-  text-shadow: none; 
+  text-shadow: none;
+  margin: auto;
 }
 h2 {
-  font-size: 2.11em; 
+  font-size: 2.11em;
 }
 h3 {
-  font-size: 1.55em; 
+  font-size: 1.55em;
 }
 h4 {
-  font-size: 1em; 
+  font-size: 1em;
 }
 
 /*********************************************
@@ -79,7 +105,7 @@ h4 {
  *********************************************/
 p {
   margin: 20px 0;
-  line-height: 1.3; 
+  line-height: 1.3;
 }
 
 /* Ensure certain elements are never larger than the slide itself */
@@ -87,22 +113,25 @@ p {
 .reveal video,
 .reveal iframe {
   max-width: 95%;
-  max-height: 95%; 
+  max-height: 95%;
   align-self: center;
   justify-self: center;
 }
 
-strong, b {
-  font-weight: bold; 
+strong,
+b {
+  font-weight: bold;
 }
 em {
-  font-style: italic; 
+  font-style: italic;
 }
 
-ol, dl, ul {
+ol,
+dl,
+ul {
   display: inline-block;
   text-align: left;
-  margin: 0 0 0 1em; 
+  margin: 0 0 0 1em;
 }
 
 blockquote {
@@ -113,15 +142,16 @@ blockquote {
   padding: 5px;
   font-style: italic;
   background: rgba(255, 255, 255, 0.05);
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2); 
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
 }
 
 blockquote p:first-child,
 blockquote p:last-child {
-  display: inline-block; }
+  display: inline-block;
+}
 
 q {
-  font-style: italic; 
+  font-style: italic;
 }
 
 pre {
@@ -134,12 +164,12 @@ pre {
   font-family: monospace;
   line-height: 1.2em;
   word-wrap: break-word;
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15); 
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);
 }
 
 code {
   font-family: monospace;
-  text-transform: none; 
+  text-transform: none;
 }
 
 pre code {
@@ -147,47 +177,45 @@ pre code {
   padding: 5px;
   overflow: auto;
   max-height: 400px;
-  word-wrap: normal; 
+  word-wrap: normal;
 }
 
 .reveal table {
   margin: auto;
   border-collapse: collapse;
-  border-spacing: 0; 
+  border-spacing: 0;
 }
 
 .reveal table th {
-  font-weight: bold; 
+  font-weight: bold;
 }
 
 .reveal table th,
 .reveal table td {
   text-align: left;
   padding: 0.2em 0.5em 0.2em 0.5em;
-  border-bottom: 1px solid; 
-}
-
-.reveal table tbody tr:last-child th,
-.reveal table tbody tr:last-child td {
-  border-bottom: none; 
 }
 
 .reveal sup {
   vertical-align: super;
-  font-size: smaller; }
+  font-size: smaller;
+}
 
 .reveal sub {
   vertical-align: sub;
-  font-size: smaller; }
+  font-size: smaller;
+}
 
 .reveal small {
   display: inline-block;
   font-size: 0.6em;
   line-height: 1.2em;
-  vertical-align: top; }
+  vertical-align: top;
+}
 
 .reveal small * {
-  vertical-align: top; }
+  vertical-align: top;
+}
 
 /*********************************************
  * LINKS
@@ -195,57 +223,65 @@ pre code {
 .reveal a {
   color: #268bd2;
   text-decoration: none;
-  -webkit-transition: color .15s ease;
-  -moz-transition: color .15s ease;
-  transition: color .15s ease; }
+  -webkit-transition: color 0.15s ease;
+  -moz-transition: color 0.15s ease;
+  transition: color 0.15s ease;
+}
 
 .reveal a:hover {
   color: #78b9e6;
   text-shadow: none;
-  border: none; }
+  border: none;
+}
 
 .reveal .roll span:after {
   color: #fff;
-  background: #1a6091; }
+  background: #1a6091;
+}
 
 /*********************************************
  * IMAGES
  *********************************************/
 .reveal a img {
-  -webkit-transition: all .15s linear;
-  -moz-transition: all .15s linear;
-  transition: all .15s linear; }
+  -webkit-transition: all 0.15s linear;
+  -moz-transition: all 0.15s linear;
+  transition: all 0.15s linear;
+}
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
   border-color: #268bd2;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.55);
+}
 
 /*********************************************
  * NAVIGATION CONTROLS
  *********************************************/
 .reveal .controls {
-  color: #268bd2; }
+  color: #268bd2;
+}
 
 /*********************************************
  * PROGRESS BAR
  *********************************************/
 .reveal .progress {
   background: rgba(0, 0, 0, 0.2);
-  color: #268bd2; }
+  color: #268bd2;
+}
 
 .reveal .progress span {
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-  transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
+  transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
+}
 
 /*********************************************
  * PRINT BACKGROUND
  *********************************************/
 @media print {
   .backgrounds {
-    background-color: #002b36; 
-  } 
+    background-color: #002b36;
+  }
 }
 
 .inverse {
@@ -254,6 +290,7 @@ pre code {
   font-family: Kalam, sans-serif;
   font-size: 120px;
   font-weight: 700;
+  display: grid;
 }
 .inverse > * {
   -webkit-background-clip: text;
@@ -263,5 +300,5 @@ pre code {
   align-items: center;
   justify-content: center;
   padding: 1em;
+  margin: auto;
 }
-    
